Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Add language to contact mechanism
* Add contact_mechanism as email recipient
* Rename zip into postal code
* Add simple distance between parties
* Configure available identifiers
* Add ar, at, by, cn, cr, gr, id, il, kr, lt, no, ro and se identifiers

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Add ad, gt, jp, md, nz, pe, py, uy, ve and za tax identifiers

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Display name on contact mechanism record name

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Limit subdivision types on address
* Add call url for mobile contact mechanisms
* Replace country and language in address format by codes
* Add sequence field to contact mechanism form view

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove starting wildcard when searching on codes and numbers
* Include all identifier from python-stdnum
* Use country code as local prefix to parse phone numbers

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Support attention party in address format
* Add party name on address
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add Erase Party wizard
* Search party also by contact mechanisms
* Add contact_mechanism_get
* Add name to contact mechanism
* Improve distinction of address record name

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Use static selection for identifier type

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add format to phone numbers
* Rename VAT Code into Tax Identifier
* Add sequence order on Identifier
* Add Replace Party wizard
* Remove streetbis from Address